# adv-data-analytc-on-remotes-server

./: Makefile  README.md  Test Jupyter Lab.ipynb  main.py  pyproject.toml  requirements.txt
