[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "adv_data_analytc_on_remotes_server"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Rungsarit R." },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["adv_data_analytc_on_remotes_server"]
include = ["pyproject.toml", "adv_data_analytc_on_remotes_server/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["adv_data_analytc_on_remotes_server"]
force-sort-within-sections = true

